--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,14 +22,27 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLineEdit" name="lineEdit"/>
-          </item>
-          <item>
            <widget class="QCheckBox" name="checkBox">
             <property name="text">
-             <string>Text</string>
+             <string>Debug text</string>
             </property>
            </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="lineEdit"/>
           </item>
          </layout>
         </item>
@@ -61,7 +74,7 @@
         <item>
          <widget class="QPushButton" name="pushButton_2">
           <property name="text">
-           <string>Activate</string>
+           <string>Dialog - AFL</string>
           </property>
          </widget>
         </item>
