Test: Added button that attemps to call the read AFL register function. Minor fixes for this to work.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>423</width>
+    <height>414</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,19 +27,6 @@
              <string>Debug text</string>
             </property>
            </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
           </item>
           <item>
            <widget class="QLineEdit" name="lineEdit"/>
@@ -81,7 +68,7 @@
         <item>
          <widget class="QPushButton" name="pushButton_3">
           <property name="text">
-           <string>Stop</string>
+           <string>Read AFL</string>
           </property>
          </widget>
         </item>
@@ -99,8 +86,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>25</height>
+     <width>423</width>
+     <height>29</height>
     </rect>
    </property>
   </widget>
