Preparing for merge

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>423</width>
-    <height>414</height>
+    <width>576</width>
+    <height>356</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,6 +47,19 @@
           </item>
          </layout>
         </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
        </layout>
       </item>
       <item>
@@ -68,7 +81,21 @@
         <item>
          <widget class="QPushButton" name="pushButton_3">
           <property name="text">
-           <string>Read AFL</string>
+           <string>Stop</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_4">
+          <property name="text">
+           <string>PushButton4</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_5">
+          <property name="text">
+           <string>PushButton5</string>
           </property>
          </widget>
         </item>
@@ -86,8 +113,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>423</width>
-     <height>29</height>
+     <width>576</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
