PHOSDialog redesigned, UI change PHOSDialog changed to QInputDialog. Added a string dialog. Minor UI changes: removed Lineedit2 and a label

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,18 +34,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>New ActiveFecList content:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="lineEdit_2"/>
-          </item>
-         </layout>
+         <layout class="QHBoxLayout" name="horizontalLayout_2"/>
         </item>
         <item>
          <spacer name="verticalSpacer">
